--- a/IgKnightWeb/src/app/features/home/components/home-hero/home-hero.html
+++ b/IgKnightWeb/src/app/features/home/components/home-hero/home-hero.html
@@ -7,18 +7,21 @@
   </p>
   
   <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6">
-    <button 
-      class="bg-orange-600 text-white px-5 sm:px-6 py-3 w-full sm:w-40 rounded-lg font-medium hover:bg-orange-700 transition"
-      (click)="navigateToCourses()"
-    >
-      Start Learning
-    </button>
-    
-    <button 
-      class="border border-orange-500 text-orange-400 px-5 sm:px-6 py-3 w-full sm:w-52 rounded-lg font-medium hover:bg-orange-900 hover:text-white transition"
-      (click)="navigateToAssignments()"
-    >
-      Explore Assignments
-    </button>
-  </div>
+  <button 
+    class="bg-orange-600 text-white px-5 sm:px-6 py-3 w-full sm:w-40 rounded-lg font-medium hover:bg-orange-700 transition
+           max-w-[240px] ml-[55px] sm:ml-0"
+    (click)="navigateToCourses()"
+  >
+    Start Learning
+  </button>
+  
+  <button 
+    class="border border-orange-500 text-orange-400 px-5 sm:px-6 py-3 w-full sm:w-52 rounded-lg font-medium hover:bg-orange-900 hover:text-white transition
+           max-w-[240px] ml-[55px] sm:ml-0"
+    (click)="navigateToAssignments()"
+  >
+    Explore Assignments
+  </button>
+</div>
+
 </section>
