--- a/IgKnightWeb/src/app/features/documentation/components/topic-list/topic-list.html
+++ b/IgKnightWeb/src/app/features/documentation/components/topic-list/topic-list.html
@@ -1,9 +1,10 @@
 <div class="w-64 bg-[#0C1424] flex flex-col">
   
-  <!-- Sticky Header -->
-  <div class="p-4 border-b border-gray-700 sticky top-0 bg-[#0C1424] z-10">
-    <h2 class="text-lg font-bold text-white">Topics</h2>
-  </div>
+ <!-- Sticky Header (Desktop only) -->
+<div class="hidden md:block p-4 border-b border-gray-700 sticky top-0 bg-[#0C1424] z-10">
+  <h2 class="sm:text-lg font-bold text-white">Topics</h2>
+</div>
+
 
   <!-- Scrollable Topics List -->
   <div class="flex-1 mt-4 overflow-y-auto pb-4 custom-scroll" style="max-height: 550px;">
