--- a/IgKnightWeb/src/app/features/home/components/header/header.html
+++ b/IgKnightWeb/src/app/features/home/components/header/header.html
@@ -5,7 +5,7 @@
     <div class="sm:w-5 sm:h-5 md:w-8 md:h-8 bg-gradient-to-r from-orange-500 to-red-500 rounded-lg flex items-center justify-center">
       <span class="text-white font-bold text-lg">🔥</span>
     </div>
-    <span class="text-2xl font-bold">IGKNIGHT</span>
+      <span class="font-bold text-xl sm:text-2xl">IGKNIGHT</span>
 
     <!-- Heroes Link -->
     <a 
